# shamir-rs

./: Cargo.toml
benches/: poly.rs  sss.rs
src/: lib.rs  mulopen.rs  mvp.rs  ped.rs  share.rs  sss.rs  testutil.rs  vss.rs
src/rs/: mod.rs  poly.rs
