[package]
name = "shamir"
version = "0.1.0"
authors = ["ross <ross.pure@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
byteorder = "1.3.4"

secp256k1_ge = { git = "https://github.com/renproject/secp256k1-rs", package = "secp256k1" }
secp256k1 = "0.19.0"
bitcoin_hashes =  "0.9.4"
bitcoin = "0.25.2"
libsecp256k1 = {git = "https://github.com/paritytech/libsecp256k1.git" }
serde_json = "1.0.59"


#UNUSED for now
# cannot compile this library
#mpc =   { git = "https://github.com/renproject/mpc-rs", package = "mpc" }
#shamir = { git = "https://github.com/renproject/shamir-rs" }
#sha2 = "0.9.1"